--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,10 @@
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "commonjs",
-    "allowJs": true,
+    "allowJs": false,
     "outDir": "./dist",
     "strict": true,
     "sourceMap": true,
     "declaration": true
-  },
-  "include": ["src/**/*"]
+  }
 }
